Rename public folder to _public to avoid Vercel conflict

--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,7 @@
     "source": "functions"
   },
   "hosting": {
-    "public": ".",
+    "public": "_public",
     "ignore": [
       "firebase.json",
       "**/.*",
