Remove _public folder completely and simplify Vercel config

--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,7 @@
     "source": "functions"
   },
   "hosting": {
-    "public": "_public",
+    "public": ".",
     "ignore": [
       "firebase.json",
       "**/.*",
